PR/57909: Jan-Benedict Glaw: Don't include (build) timestamp when doing a reproducible build